--- a/extension/package.json
+++ b/extension/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "chrome-extension-boilerplate-react",
+  "name": "anti-sus-extension",
   "version": "5.0.4",
-  "description": "A chrome extension boilerplate built with React 18, Webpack 5, and Webpack Dev Server 4",
+  "description": "A chrome extension to detect and discuss sussy internet activity",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lxieyang/chrome-extension-boilerplate-react.git"
+    "url": "https://github.com/ankushKun/sudo-apt-uninstall-sleep"
   },
   "scripts": {
     "build": "node utils/build.js",
