--- a/browser/package.json
+++ b/browser/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@permaweb/aoconnect": "^0.0.48",
+    "arweave": "^1.14.4",
+    "crypto": "^1.0.1",
     "electron-as-browser": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
