--- a/browser/package.json
+++ b/browser/package.json
@@ -9,13 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.3.0",
     "@permaweb/aoconnect": "^0.0.48",
     "arweave": "^1.14.4",
     "crypto": "^1.0.1",
     "electron-as-browser": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
