--- a/ixten/package.json
+++ b/ixten/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "postcss": "^8.4.35",
     "postcss-preset-mantine": "^1.13.0",
-    "postcss-simple-vars": "^7.0.1"
+    "postcss-simple-vars": "^7.0.1",
+    "tailwindcss": "^3.4.1"
   }
 }
